Fix double scroll bar bug, add livereload

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -235,7 +235,7 @@ html {
 }
 
 body {
-	overflow-x: hidden;
+	//overflow-x: hidden;
 }
 
 $page_wrap_padding: 30px;
